Manifest/task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  labels:
    app: api-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-deploy
  template:
    metadata:
      name: api-deploy
      labels:
        app: api-deploy
    spec:
      containers:
        - name: api-deploy
          image: abdulmunim/apik8s:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 3000
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/tasks
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/tasks
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
      restartPolicy: Always
